--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@ html {
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
+  display: flex;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
@@ -48,4 +49,53 @@ ol {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
+}
+
+.content {
+  max-width: 1140px;
+  max-height: 534px;
+  margin: 133px 30px;
+  display: grid;
+  align-items: end;
+  grid-template-columns: 711px 399px;
+  column-gap: 30px;
+  grid-template-areas: 
+  "result content__details";
+}
+
+.result {
+  grid-area: result;
+}
+
+.content__details {
+  grid-area: content__details;
+  width: 100%;
+  height: 100%;
+}
+
+.result__video-container {
+  width: 711px;
+  height: 386px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.title {
+  margin-right: 140px;
+}
+
+.content__list-container {
+  margin-top: 26px;
+  height: 298px;
+  overflow-y: scroll;
 }
