--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ html {
   margin: auto;
   display: flex;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -58,7 +58,7 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
 
 .content {
@@ -69,8 +69,7 @@ ol {
   align-items: end;
   grid-template-columns: 711px 399px;
   column-gap: 30px;
-  grid-template-areas: 
-  "result content__details";
+  grid-template-areas: "result content__details";
 }
 
 .result {
@@ -86,20 +85,24 @@ ol {
 .result__video-container {
   width: 711px;
   height: 386px;
-  margin-bottom: 16px;
   position: relative;
+  margin-bottom: 16px;
 }
 
 .result__video {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
+  margin-bottom: 4px;
   display: flex;
   justify-content: space-between;
   align-items: start;
+  gap: 40px;
+  max-height: 54px;
 }
 
 .search-form__fieldset {
@@ -107,48 +110,54 @@ ol {
 }
 
 .search-form__fieldset-title {
-  font-family: 'Fira Sans Condensed', sans-serif;
+  padding-bottom: 5px;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 100%;
 }
 
 .search-form__label {
   display: flex;
   width: fit-content;
   cursor: pointer;
-  position: relative;
 }
 
 .search-form__textfield {
-  font-family: 'Fira Sans Condensed', sans-serif;
+  width: 225px;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: transparent;
   border: solid 1px white;
-  border-left: none;
-  border-right: none;
+  border-left: transparent;
+  border-right: transparent;
   appearance: none;
 }
 
 .search-form__textfield::placeholder {
-  color: #FFFFFF / 0.7;
+  color: #ffffff / 0.7;
 }
 
 .search-form__textfield:focus {
   outline: none;
 }
 
-.search-form__label:has(:focus) {
+.search-form__label:focus {
   outline: none;
 }
 
 .search-form__label:has(:focus-visible) {
-  outline: solid 1px #FFFFFF;       /*переделать, на фокус тоже срабатывает*/
+  outline: solid 1px #ffffff;
+  outline-offset: 1px;
 }
 
+.search-form__label:active {
+  outline: none;
+  border-left: solid 1px white;
+  border-right: solid 1px white;
+}
 
 .search-form__checkbox-list {
   display: flex;
@@ -156,28 +165,22 @@ ol {
 }
 
 .search-form__pseudo-checkbox {
+  margin-top: 2px;
   width: 19px;
   height: 19px;
-  border: solid 1px #FFFFFF;
+  border: solid 1px #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.search-form__pseudo-checkbox::after {
-
-}
-
-input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
+input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
   content: "";
   inset: 2px;
   width: 15px;
   height: 15px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
-
-
-
 
 .search-form__label-text {
   margin-left: 5px;
@@ -189,17 +192,18 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
 }
 
 .button {
-  border: solid 1px #FFFFFF;
+  border: solid 1px #ffffff;
   background-color: transparent;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 100%;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .search-form__submit-button {
-  padding: 6px 73.5px;
+  margin-top: 20px;
+  padding: 7px 73px;
   cursor: pointer;
 }
 
@@ -207,7 +211,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
   width: 100%;
 }
 
-.button{
+.button {
   outline: none;
 }
 
@@ -220,13 +224,18 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
   background-color: #545050;
 }
 
+.button:focus {
+  outline: none;
+}
+
 .button:focus-visible {
-  outline: double 1px #FFFFFF;
+  outline: solid 1px #ffffff;
+  outline-offset: 1px;
 }
 
 .title {
   margin-right: 140px;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 75px;
   line-height: 94%;
@@ -238,7 +247,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
 }
 
 .content__list-container {
-  margin-top: 26px;
+  margin-top: 23px;
   height: 298px;
   overflow-y: scroll;
   position: relative;
@@ -250,23 +259,19 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
   gap: 30px;
 }
 
-.content__list-item{
+.content__list-item {
   padding-left: 3px;
   padding-right: 3px;
 }
 
 .content__card-link {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .content__video-card {
   display: flex;
   align-items: start;
-}
-
-.content__video-card:active {
-  background-color: #545050;
 }
 
 .content__video-card:hover {
@@ -279,16 +284,15 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
 }
 
 .content__video-card:focus-visible {
-  outline: solid 1px #FFFFFF;
+  outline: solid 1px #ffffff;
 }
-
 
 .content__video-card-description-container {
   flex-grow: 1;
 }
 
 .content__video-card-title {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 100%;
@@ -300,14 +304,15 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
 }
 
 .content__video-card-description {
-  font-family: 'Fira Sans Condensed', sans-serif;
+  margin-top: 4px;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 16.2px;
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 4;
 }
 
 .content__video-card-thumbnail {
@@ -315,4 +320,9 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
   height: 103px;
   object-fit: cover;
   object-position: center;
+}
+
+.content__card-link_current {
+  display: block;
+  background-color: #545050;
 }
