--- a/styles/style.css
+++ b/styles/style.css
@@ -63,8 +63,7 @@ ol {
 
 .content {
   max-width: 1140px;
-  max-height: 534px;
-  margin: 133px 30px;
+  margin: auto;
   display: grid;
   align-items: end;
   grid-template-columns: 711px 399px;
@@ -102,7 +101,6 @@ ol {
   justify-content: space-between;
   align-items: start;
   gap: 40px;
-  max-height: 54px;
 }
 
 .search-form__fieldset {
@@ -127,7 +125,7 @@ ol {
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 100%;
+  line-height: 1;
   color: #ffffff;
   background-color: transparent;
   border: solid 1px white;
@@ -200,7 +198,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 100%;
+  line-height: 1;
   color: #ffffff;
 }
 
@@ -212,6 +210,8 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
 
 .more-button {
   width: 100%;
+  margin-top: 30px;
+  padding: 6px 142px;
 }
 
 .button {
@@ -241,7 +241,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 75px;
-  line-height: 94%;
+  line-height: 0.94;
   text-transform: uppercase;
 }
 
@@ -252,7 +252,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
 .content__list-container {
   margin-top: 23px;
   height: 298px;
-  overflow-y: scroll;
+  overflow-y: auto;
   position: relative;
 }
 
@@ -268,29 +268,30 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
 }
 
 .content__card-link {
+  display: block;
   text-decoration: none;
   color: #ffffff;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: solid 1px #ffffff;
+}
+
+.content__card-link:active {
+  background-color: #545050;
 }
 
 .content__video-card {
   display: flex;
   align-items: start;
-}
-
-.content__video-card:hover {
-  text-decoration: underline;
-}
-
-.content__video-card:focus {
-  outline: none;
-}
-
-.content__video-card:focus-visible {
-  outline: solid 1px #ffffff;
-}
-
-.content__video-card:active {
-  background-color: #545050;
 }
 
 .content__video-card-description-container {
@@ -301,7 +302,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 30px;
-  line-height: 100%;
+  line-height: 1;
   text-transform: uppercase;
   overflow: hidden;
   white-space: nowrap;
@@ -314,7 +315,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 16.2px;
+  line-height: 0.9; /* (line-height из макета 16.2px) / (размер шрифта из макета 18px)  */
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
